intern/ghost/intern/GHOST_WindowWin32.cpp
@@ -649,7 +649,7 @@ GHOST_Context *GHOST_WindowWin32::newDrawingContext(GHOST_TDrawingContextType ty
 		        WGL_CONTEXT_COMPATIBILITY_PROFILE_BIT_ARB,
 		        3, 2,
 #endif
-		        GHOST_OPENGL_WGL_CONTEXT_FLAGS,
+		        (m_debug_context ? WGL_CONTEXT_DEBUG_BIT_ARB : 0),
 		        GHOST_OPENGL_WGL_RESET_NOTIFICATION_STRATEGY);
 #else
 #  error
